[gd_scene load_steps=80 format=3 uid="uid://ca4jhs7rwnae1"]

[ext_resource type="Script" path="res://Charecters/Player/Player.gd" id="1_n0hds"]
[ext_resource type="Texture2D" uid="uid://bnyu0163fvifg" path="res://Assets/Astronaut - player/astronaut_death/alien_death09.png" id="2_110du"]
[ext_resource type="Texture2D" uid="uid://yrrlq4kbcgrv" path="res://Assets/Astronaut - player/walk - back/astronautas_back1.png" id="2_x3158"]
[ext_resource type="Texture2D" uid="uid://b6yc4jk1o76qe" path="res://Assets/Astronaut - player/walk - back/astronautas_back2.png" id="3_e2066"]
[ext_resource type="Texture2D" uid="uid://cb54kjo6osa5f" path="res://Assets/Astronaut - player/walk -front/astronautas_front1.png" id="4_elg1h"]
[ext_resource type="Texture2D" uid="uid://cfuink3wqbdsr" path="res://Assets/Astronaut - player/astronautas su ginklu/front/sprite_character_w_gun00.png" id="5_j5cis"]
[ext_resource type="Texture2D" uid="uid://61ij4707h2m1" path="res://Assets/Astronaut - player/walk -front/astronautas_front2.png" id="5_wfa6g"]
[ext_resource type="Texture2D" uid="uid://c2kcdym7jj4d7" path="res://Assets/Astronaut - player/astronautas su ginklu/front/sprite_character_w_gun01.png" id="6_hlpxr"]
[ext_resource type="Texture2D" uid="uid://cqxd06m3ke7x5" path="res://Assets/Astronaut - player/walk - left/astronautas_left2.png" id="6_i6myc"]
[ext_resource type="Texture2D" uid="uid://d2pdb3lkvv1hu" path="res://Assets/Astronaut - player/idle/astronautas_idle1.png" id="7_b4u02"]
[ext_resource type="Texture2D" uid="uid://b4yj378fiv62a" path="res://Assets/Astronaut - player/walk - left/astronautas_left1.png" id="7_tplyn"]
[ext_resource type="Texture2D" uid="uid://c5ipsty2rj6wo" path="res://Assets/Astronaut - player/idle/astronautas_idle2.png" id="8_3266u"]
[ext_resource type="Texture2D" uid="uid://c13frnhr4x22b" path="res://Assets/Astronaut - player/walk - left/astronautas_left3.png" id="8_uvc61"]
[ext_resource type="Texture2D" uid="uid://sgkscpv1i5g8" path="res://Assets/Astronaut - player/astronautas su ginklu/back/sprite_character_w_gun02.png" id="9_to3pa"]
[ext_resource type="Texture2D" uid="uid://173c5lsyrs60" path="res://Assets/Astronaut - player/walk right/astronautas_right2.png" id="9_vs4pa"]
[ext_resource type="Texture2D" uid="uid://ccn4a7yr3fi5y" path="res://Assets/Astronaut - player/astronautas su ginklu/back/sprite_character_w_gun03.png" id="10_57p5j"]
[ext_resource type="Texture2D" uid="uid://d2r071s3tel8g" path="res://Assets/Astronaut - player/walk right/astronautas_right1.png" id="10_bq827"]
[ext_resource type="Texture2D" uid="uid://br0uikjm2q1oa" path="res://Assets/Astronaut - player/walk right/astronautas_right3.png" id="11_tkn1f"]
[ext_resource type="Texture2D" uid="uid://b8a51ix522oov" path="res://Assets/Astronaut - player/astronautas su ginklu/sprite_atrsonaut_idle_gun0.png" id="13_65aaw"]
[ext_resource type="Texture2D" uid="uid://l5xeh5g0u3nx" path="res://Assets/Astronaut - player/astronaut_death/alien_death00.png" id="14_0htrs"]
[ext_resource type="Texture2D" uid="uid://b6l0ppb8lqe4x" path="res://Assets/Astronaut - player/astronautas su ginklu/sprite_atrsonaut_idle_gun1.png" id="14_n3otf"]
[ext_resource type="Texture2D" uid="uid://btr4ndfdekuq3" path="res://Assets/Astronaut - player/astronaut_death/alien_death01.png" id="15_446oi"]
[ext_resource type="Texture2D" uid="uid://cdvo454qe6rpu" path="res://Assets/Astronaut - player/astronautas su ginklu/left/sprite_character_w_gun04.png" id="16_2yb2h"]
[ext_resource type="Texture2D" uid="uid://dxvm7aw3flg7r" path="res://Assets/Astronaut - player/astronautas su ginklu/left/sprite_character_w_gun05.png" id="17_hoscw"]
[ext_resource type="Texture2D" uid="uid://bps5cvgupvynd" path="res://Assets/Astronaut - player/astronaut_death/alien_death02.png" id="17_mbvrt"]
[ext_resource type="Texture2D" uid="uid://bufk3acooo8y2" path="res://Assets/Astronaut - player/astronaut_death/alien_death03.png" id="18_pobl1"]
[ext_resource type="Texture2D" uid="uid://bvfbybh2k76da" path="res://Assets/Astronaut - player/astronautas su ginklu/left/sprite_character_w_gun06.png" id="18_ukpod"]
[ext_resource type="Texture2D" uid="uid://bdp8lej0soqp3" path="res://Assets/Astronaut - player/astronaut_death/alien_death05.png" id="19_bh2de"]
[ext_resource type="Texture2D" uid="uid://b2d2eg151sv7" path="res://Assets/Astronaut - player/astronaut_death/alien_death06.png" id="21_i75wx"]
[ext_resource type="Texture2D" uid="uid://c7t78rw5jtvi8" path="res://Assets/Astronaut - player/astronautas su ginklu/right/sprite_character_w_gun07.png" id="22_jkwiv"]
[ext_resource type="Texture2D" uid="uid://cwpsnfadxcbg7" path="res://Assets/Astronaut - player/astronaut_death/alien_death07.png" id="22_s2y34"]
[ext_resource type="Texture2D" uid="uid://cnhpnwbyf1c5l" path="res://Assets/Astronaut - player/astronaut_death/alien_death08.png" id="23_nodiu"]
[ext_resource type="Texture2D" uid="uid://qt57f1gwtqxl" path="res://Assets/Astronaut - player/astronautas su ginklu/right/sprite_character_w_gun08.png" id="23_q6c7p"]
[ext_resource type="Texture2D" uid="uid://c8i0r4jjy0kui" path="res://Assets/Astronaut - player/astronaut_death/alien_death10.png" id="24_3fp8q"]
[ext_resource type="Texture2D" uid="uid://dfw100isngqwj" path="res://Assets/Astronaut - player/astronautas su ginklu/right/sprite_character_w_gun09.png" id="24_7o27d"]
[ext_resource type="Texture2D" uid="uid://xhxs13tff6pk" path="res://Assets/Astronaut - player/astronaut_death/alien_death11.png" id="24_s2sd0"]
[ext_resource type="AudioStream" uid="uid://d06ny7ypsx817" path="res://sounds tracks/snd_footsteps_concrete-36690.mp3" id="25_g74ga"]
[ext_resource type="AudioStream" uid="uid://cy37ktjjn0qxe" path="res://sounds tracks/male-death-sound-128357.mp3" id="26_intwu"]
[ext_resource type="Script" path="res://Charecters/Player/ShootRange.gd" id="27_5dmk2"]
[ext_resource type="AudioStream" uid="uid://t3j2q7yrnc0p" path="res://sounds tracks/pick-up.mp3" id="28_e4654"]
[ext_resource type="AudioStream" uid="uid://xqe7pavpxw46" path="res://sounds tracks/8-bit-video-game-lose-sound-version-1-145828.mp3" id="29_rr8t1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5lh41"]
radius = 22.0
height = 100.0

[sub_resource type="SpriteFrames" id="SpriteFrames_hh3h1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_x3158")
}, {
"duration": 1.0,
"texture": ExtResource("3_e2066")
}],
"loop": true,
"name": &"back_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_j5cis")
}, {
"duration": 1.0,
"texture": ExtResource("6_hlpxr")
}],
"loop": true,
"name": &"back_walk_gun",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_elg1h")
}, {
"duration": 1.0,
"texture": ExtResource("5_wfa6g")
}],
"loop": true,
"name": &"front_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_to3pa")
}, {
"duration": 1.0,
"texture": ExtResource("10_57p5j")
}],
"loop": true,
"name": &"front_walk_gun",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_b4u02")
}, {
"duration": 1.0,
"texture": ExtResource("8_3266u")
}],
"loop": true,
"name": &"idle_main",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_65aaw")
}, {
"duration": 1.0,
"texture": ExtResource("14_n3otf")
}],
"loop": true,
"name": &"idle_main_gun",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_i6myc")
}, {
"duration": 1.0,
"texture": ExtResource("7_tplyn")
}, {
"duration": 1.0,
"texture": ExtResource("6_i6myc")
}, {
"duration": 1.0,
"texture": ExtResource("8_uvc61")
}],
"loop": true,
"name": &"left_walk",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_2yb2h")
}, {
"duration": 1.0,
"texture": ExtResource("17_hoscw")
}, {
"duration": 1.0,
"texture": ExtResource("18_ukpod")
}],
"loop": true,
"name": &"left_walk_gun",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_vs4pa")
}, {
"duration": 1.0,
"texture": ExtResource("10_bq827")
}, {
"duration": 1.0,
"texture": ExtResource("9_vs4pa")
}, {
"duration": 1.0,
"texture": ExtResource("11_tkn1f")
}],
"loop": true,
"name": &"right_walk",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_jkwiv")
}, {
"duration": 1.0,
"texture": ExtResource("23_q6c7p")
}, {
"duration": 1.0,
"texture": ExtResource("24_7o27d")
}],
"loop": true,
"name": &"right_walk_gun",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_x1xc5"]
resource_name = "back_walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("2_x3158"), ExtResource("3_e2066")]
}

[sub_resource type="Animation" id="Animation_3lhbm"]
resource_name = "back_walk_gun"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("5_j5cis"), ExtResource("6_hlpxr")]
}

[sub_resource type="Animation" id="Animation_sh0en"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("14_0htrs"), ExtResource("15_446oi"), ExtResource("17_mbvrt"), ExtResource("18_pobl1"), ExtResource("19_bh2de"), ExtResource("21_i75wx"), ExtResource("22_s2y34"), ExtResource("23_nodiu"), ExtResource("2_110du"), ExtResource("24_3fp8q"), ExtResource("24_s2sd0")]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}

[sub_resource type="Animation" id="Animation_xlijm"]
resource_name = "front_walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("4_elg1h"), ExtResource("5_wfa6g")]
}

[sub_resource type="Animation" id="Animation_8436s"]
resource_name = "front_walk_gun"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("9_to3pa"), ExtResource("10_57p5j")]
}

[sub_resource type="Animation" id="Animation_7s4qu"]
resource_name = "new_animation"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("7_b4u02"), ExtResource("8_3266u")]
}

[sub_resource type="Animation" id="Animation_5ntim"]
resource_name = "idle_main_gun"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("13_65aaw"), ExtResource("14_n3otf")]
}

[sub_resource type="Animation" id="Animation_bg83u"]
resource_name = "left_walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("7_tplyn"), ExtResource("6_i6myc"), ExtResource("8_uvc61")]
}

[sub_resource type="Animation" id="Animation_f0ngp"]
resource_name = "left_walk_gun"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("16_2yb2h"), ExtResource("17_hoscw"), ExtResource("18_ukpod")]
}

[sub_resource type="Animation" id="Animation_80lpj"]
resource_name = "right_walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("10_bq827"), ExtResource("9_vs4pa"), ExtResource("11_tkn1f")]
}

[sub_resource type="Animation" id="Animation_aheno"]
resource_name = "right_walk_gun"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("22_jkwiv"), ExtResource("23_q6c7p"), ExtResource("24_7o27d")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2k4og"]
_data = {
"back_walk": SubResource("Animation_x1xc5"),
"back_walk_gun": SubResource("Animation_3lhbm"),
"death": SubResource("Animation_sh0en"),
"front_walk": SubResource("Animation_xlijm"),
"front_walk_gun": SubResource("Animation_8436s"),
"idle_main": SubResource("Animation_7s4qu"),
"idle_main_gun": SubResource("Animation_5ntim"),
"left_walk": SubResource("Animation_bg83u"),
"left_walk_gun": SubResource("Animation_f0ngp"),
"right_walk": SubResource("Animation_80lpj"),
"right_walk_gun": SubResource("Animation_aheno")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gwg0x"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_iibq0"]
animation = &"idle_main"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4opcc"]
animation = &"idle_main_gun"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ep6r4"]
animation = &"left_walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_w5pdt"]
animation = &"right_walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_16e7o"]
animation = &"front_walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kyvm3"]
animation = &"back_walk"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_jmk7c"]
blend_point_0/node = SubResource("AnimationNodeAnimation_ep6r4")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_w5pdt")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_16e7o")
blend_point_2/pos = Vector2(0, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_kyvm3")
blend_point_3/pos = Vector2(0, -1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qp1rj"]
animation = &"left_walk_gun"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_owryb"]
animation = &"back_walk_gun"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_66upj"]
animation = &"right_walk_gun"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_p2arh"]
animation = &"front_walk_gun"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xgx2f"]
animation = &"left_walk_gun"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_hwe6r"]
blend_point_0/node = SubResource("AnimationNodeAnimation_qp1rj")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_owryb")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_66upj")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_p2arh")
blend_point_3/pos = Vector2(0, 1)
blend_point_4/node = SubResource("AnimationNodeAnimation_xgx2f")
blend_point_4/pos = Vector2(-1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fxigi"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2a55f"]
advance_mode = 0

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4f1yv"]
advance_mode = 0

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ug5vq"]
reset = false

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sjegx"]
reset = false

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8p3tp"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_j3f6r"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_k7e2a"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_vyr3t"]
states/Death/node = SubResource("AnimationNodeAnimation_gwg0x")
states/Death/position = Vector2(236, -2.45564)
states/End/position = Vector2(643, 87)
states/Idle/node = SubResource("AnimationNodeAnimation_iibq0")
states/Idle/position = Vector2(236, 77)
states/Idle_Gun/node = SubResource("AnimationNodeAnimation_4opcc")
states/Idle_Gun/position = Vector2(256, 148)
states/Start/position = Vector2(96, 77)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_jmk7c")
states/Walk/position = Vector2(388, 77)
states/Walk_Gun/node = SubResource("AnimationNodeBlendSpace2D_hwe6r")
states/Walk_Gun/position = Vector2(409, 148)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_fxigi"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_2a55f"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_4f1yv"), "Idle_Gun", "Idle", SubResource("AnimationNodeStateMachineTransition_ug5vq"), "Idle", "Idle_Gun", SubResource("AnimationNodeStateMachineTransition_sjegx"), "Idle_Gun", "Walk_Gun", SubResource("AnimationNodeStateMachineTransition_8p3tp"), "Walk_Gun", "Idle_Gun", SubResource("AnimationNodeStateMachineTransition_j3f6r"), "Idle", "Death", SubResource("AnimationNodeStateMachineTransition_k7e2a")]
graph_offset = Vector2(0, -64.4556)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2tru6"]
radius = 217.0
height = 434.0

[node name="Player" type="CharacterBody2D"]
collision_mask = 42
motion_mode = 1
script = ExtResource("1_n0hds")
speed = 5000.0

[node name="Body" type="Sprite2D" parent="."]
position = Vector2(-1, -23)
texture = ExtResource("7_b4u02")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -10)
shape = SubResource("CapsuleShape2D_5lh41")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(-1, -22)
sprite_frames = SubResource("SpriteFrames_hh3h1")
animation = &"front_walk_gun"

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../Body")
libraries = {
"": SubResource("AnimationLibrary_2k4og")
}
tree_root = SubResource("AnimationNodeStateMachine_vyr3t")
anim_player = NodePath("../AnimationPlayer")
parameters/Walk/blend_position = Vector2(-0.4672, -0.277533)
parameters/Walk_Gun/blend_position = Vector2(-0.00480002, 0.0216451)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Body")
libraries = {
"": SubResource("AnimationLibrary_2k4og")
}

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="footstep" type="AudioStreamPlayer" parent="."]
stream = ExtResource("25_g74ga")
volume_db = -20.0

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("26_intwu")
volume_db = -20.0

[node name="Range" type="Area2D" parent="."]
collision_layer = 17
collision_mask = 8

[node name="ShootRange" type="CollisionShape2D" parent="Range"]
visible = false
position = Vector2(1, -23)
shape = SubResource("CapsuleShape2D_2tru6")
script = ExtResource("27_5dmk2")

[node name="RayCast2D" type="RayCast2D" parent="Range"]
target_position = Vector2(0, 115)
collision_mask = 10
collide_with_areas = true

[node name="PickUpItem" type="AudioStreamPlayer" parent="."]
stream = ExtResource("28_e4654")
volume_db = -20.0

[node name="LoserAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("29_rr8t1")
volume_db = -20.0

[node name="Marker2D" type="Marker2D" parent="."]

[node name="FireTimer" type="Timer" parent="."]

[connection signal="body_entered" from="Range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_range_body_exited"]
[connection signal="timeout" from="FireTimer" to="." method="_on_fire_timer_timeout"]
